--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,29 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "59641cb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "\n",
+    "chat = ChatOpenAI(model=\"gpt-4.1-nano\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d4abe23c",
+   "id": "883b7e4d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2023년 기준으로 한국에는 초등학교, 중학교, 고등학교, 특수학교 등 다양한 유형의 학교가 운영되고 있습니다. 대략적인 수치는 다음과 같습니다:\\n\\n- 초등학교: 약 5,600개\\n- 중학교: 약 3,400개\\n- 고등학교: 약 2,100개\\n- 특수학교 및 기타 교육기관: 수백 개\\n\\n이 수치는 매년 변동될 수 있으며, 정확한 최신 통계는 교육부 또는 한국교육개발원 등의 공식 자료를 참고하는 것이 좋습니다.'"
+       "AIMessage(content='태국과 한국 사이의 직선 거리는 약 3,000킬로미터에서 3,500킬로미터 정도입니다. 두 나라를 연결하는 거리는 출발지와 도착지에 따라 다를 수 있습니다. 제 이름은 지피티입니다!')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.schema import HumanMessage, AIMessage, SystemMessage\n",
     "\n",
-    "chat = ChatOpenAI(model_name=\"gpt-4.1-nano\")\n",
+    "messages = [\n",
+    "    SystemMessage(\n",
+    "        content=\"You are a geography expert. And you only reply in Korean.\",\n",
+    "    ),\n",
+    "    AIMessage(content=\"안녕하세요, 제 이름은 지피티 입니다!\"),\n",
+    "    HumanMessage(\n",
+    "        content=\"What is the distance between Thailand and Korea? Also, what is your name?\",\n",
+    "    ),\n",
+    "]\n",
     "\n",
-    "a = chat.predict(\"한국에는 얼마나 많은 학교가 있나요?\")\n",
-    "\n",
-    "a"
+    "chat.predict_messages(messages)"
    ]
   }
  ],
