--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,14 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "59641cb3",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.prompts import PromptTemplate, ChatPromptTemplate\n",
     "\n",
-    "chat = ChatOpenAI(model=\"gpt-4.1-nano\")"
+    "chat = ChatOpenAI(model=\"gpt-4.1-nano\")\n",
+    "\n",
+    "template = PromptTemplate.from_template(\n",
+    "    \"{country_a}와 {country_b} 사이의 거리는 어떻게 되나요?\",\n",
+    ")\n",
+    "\n",
+    "prompt = template.format(country_a=\"Mexico\", country_b=\"Thailand\")\n",
+    "\n",
+    "\n",
+    "chat.predict(prompt)"
    ]
   },
   {
@@ -30,19 +40,26 @@
     }
    ],
    "source": [
-    "from langchain.schema import HumanMessage, AIMessage, SystemMessage\n",
+    "template = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\"system\", \"You are a geography expert. And you only reply in {language}.\"),\n",
+    "        (\"ai\", \"안녕하세요, 제 이름은 {name}입니다!\"),\n",
+    "        (\n",
+    "            \"human\",\n",
+    "            \"What is the distance between {country_a} and {country_b}. Also, what is your name?\",\n",
+    "        ),\n",
+    "    ]\n",
+    ")\n",
     "\n",
-    "messages = [\n",
-    "    SystemMessage(\n",
-    "        content=\"You are a geography expert. And you only reply in Korean.\",\n",
-    "    ),\n",
-    "    AIMessage(content=\"안녕하세요, 제 이름은 지피티 입니다!\"),\n",
-    "    HumanMessage(\n",
-    "        content=\"What is the distance between Thailand and Korea? Also, what is your name?\",\n",
-    "    ),\n",
-    "]\n",
+    "prompt = template.format_messages(\n",
+    "    language=\"Korean\",\n",
+    "    name=\"Socrates\",\n",
+    "    country_a=\"Mexico\",\n",
+    "    country_b=\"Thailand\",\n",
+    ")\n",
     "\n",
-    "chat.predict_messages(messages)"
+    "\n",
+    "chat.predict_messages(prompt)"
    ]
   }
  ],
