Chaining Chains, StreamingStdOutCallbackHandler

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,91 +2,170 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "id": "59641cb3",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts import PromptTemplate, ChatPromptTemplate\n",
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain.callbacks.streaming_stdout import StreamingStdOutCallbackHandler\n",
     "\n",
-    "chat = ChatOpenAI(model=\"gpt-4.1-nano\", temperature=0.7, max_tokens=300)"
+    "stdOutCallbackHandler = StreamingStdOutCallbackHandler()\n",
+    "chat = ChatOpenAI(model=\"gpt-4.1-nano\", temperature=0.1, streaming=True, callbacks=[stdOutCallbackHandler])\n",
+    "\n",
+    "chef_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\"system\", \"당신은 월드 클래스 국제 요리사입니다.\"),\n",
+    "        (\"human\", \"저는 {cuisine} 요리를 좋아합니다. {cuisine} 요리법을 알려주세요.\"),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "chef_chain = chef_prompt | chat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "ff125730",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.schema import BaseOutputParser\n",
-    "\n",
-    "class CommaOutParser(BaseOutputParser):\n",
-    "    def parse(self, text):\n",
-    "        items = text.strip().split(\",\") # 텍스트 앞뒤 공백 제거, 쉼표로 분리하여 리스트 반환\n",
-    "        return (list(map(str.strip, items))) # 각 아이템의 앞뒤 공백 제거\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "698bf2a3",
+   "execution_count": 6,
+   "id": "36f0188f",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "한국 요리를 좋아하신다니 정말 기쁩니다! 대표적인 한국 요리 중 하나인 **불고기** 레시피를 소개해드릴게요. 달콤하고 짭조름한 양념이 고기와 어우러져 맛있게 즐기실 수 있습니다.\n",
+      "\n",
+      "### 불고기 만들기\n",
+      "\n",
+      "#### 재료 (4인분 기준)\n",
+      "- 소불고기 (얇게 썬 것) 500g\n",
+      "- 양파 1개\n",
+      "- 당근 1개\n",
+      "- 대파 1대\n",
+      "- 마늘 4쪽\n",
+      "- 참기름 2큰술\n",
+      "- 식용유 적당량\n",
+      "- 통깨 약간\n",
+      "\n",
+      "#### 양념 재료\n",
+      "- 간장 4큰술\n",
+      "- 설탕 2큰술\n",
+      "- 맛술 2큰술\n",
+      "- 다진 마늘 1큰술\n",
+      "- 다진 생강 1작은술 (선택)\n",
+      "- 후춧가루 약간\n",
+      "- 배 또는 사과 1/2개 (갈아서 사용, 고기를 연하게 하고 단맛을 더함)\n",
+      "\n",
+      "#### 만드는 법\n",
+      "1. **양념장 준비**  \n",
+      "   볼에 간장, 설탕, 맛술, 다진 마늘, 다진 생강, 배 또는 사과 갈은 것, 후춧가루를 넣고 잘 섞어 양념장을 만듭니다.\n",
+      "\n",
+      "2. **고기 손질**  \n",
+      "   소불고기를 먹기 좋은 크기로 썰거나 이미 썰어진 것을 준비합니다.\n",
+      "\n",
+      "3. **양념에 재우기**  \n",
+      "   고기를 양념장에 넣고 잘 버무린 후, 랩을 씌워 냉장고에서 최소 30분 이상 재워둡니다. 가능하면 1시간 이상 재우면 더 맛있어요.\n",
+      "\n",
+      "4. **채소 손질**  \n",
+      "   양파는 채 썰고, 당근은 얇게 채 썰기, 대파는 어슷하게 썰기 준비합니다.\n",
+      "\n",
+      "5. **요리하기**  \n",
+      "   팬에 식용유를 두르고 중불에서 달군 후, 양파와 당근을 먼저 볶아줍니다. 채소가 살짝 익으면 재워둔 고기를 넣고 볶아줍니다.\n",
+      "\n",
+      "6. **마무리**  \n",
+      "   고기가 익으면 참기름을 넣고 살짝 섞은 후, 대파와 통깨를 뿌려 마무리합니다.\n",
+      "\n",
+      "7. **서빙**  \n",
+      "   따뜻한 밥과 함께 내면 더욱 맛있어요!\n",
+      "\n",
+      "---\n",
+      "\n",
+      "혹시 다른 한국 요리도 원하시면 말씀해 주세요! 김치찌개, 잡채, 비빔밥 등 다양한 요리법도 알려드릴 수 있습니다.한국 요리를 좋아하신다니 정말 기쁩니다! 불고기 레시피를 채식 버전으로 변경하는 방법을 안내해 드리겠습니다. 기존 레시피의 핵심 재료와 양념은 최대한 유지하면서, 고기 대신 사용할 수 있는 대체 재료를 찾는 것이 중요합니다.\n",
+      "\n",
+      "대체 재료 제안:\n",
+      "- **버섯**: 얇게 썬 표고버섯이나 느타리버섯은 고기와 비슷한 식감과 풍미를 제공하며, 불고기와 잘 어울립니다.\n",
+      "- **두부**: 단단한 두부를 얇게 썰어 양념에 재운 후 볶으면 고기 대신 사용할 수 있습니다.\n",
+      "- **식물성 고기 대체품**: 텍스처드 식물성 고기(예: 텍스처드 식물성 단백질, 텍스처드 식물성 고기 제품)가 있다면 활용 가능합니다.\n",
+      "\n",
+      "양념은 기존 레시피와 동일하게 사용하되, 버섯이나 두부를 넣어 볶는 방식으로 조리하면 됩니다.\n",
+      "\n",
+      "### 채식 불고기 만들기 (4인분 기준)\n",
+      "\n",
+      "#### 재료\n",
+      "- 표고버섯 또는 느타리버섯 500g (얇게 썬 것) 또는 단단한 두부 400g (얇게 썬 것)\n",
+      "- 양파 1개\n",
+      "- 당근 1개\n",
+      "- 대파 1대\n",
+      "- 마늘 4쪽\n",
+      "- 참기름 2큰술\n",
+      "- 식용유 적당량\n",
+      "- 통깨 약간\n",
+      "\n",
+      "#### 양념 재료\n",
+      "- 간장 4큰술\n",
+      "- 설탕 2큰술\n",
+      "- 맛술 2큰술 (혹은 쌀 식초로 대체 가능)\n",
+      "- 다진 마늘 1큰술\n",
+      "- 다진 생강 1작은술 (선택)\n",
+      "- 후춧가루 약간\n",
+      "- 배 또는 사과 1/2개 (갈아서 사용)\n",
+      "\n",
+      "#### 만드는 법\n",
+      "1. **양념장 준비**  \n",
+      "   볼에 간장, 설탕, 맛술, 다진 마늘, 다진 생강, 배 또는 사과 갈은 것, 후춧가루를 넣고 잘 섞어 양념장을 만듭니다.\n",
+      "\n",
+      "2. **대체 재료 손질**  \n",
+      "   버섯은 얇게 썰고, 두부는 키친타월로 물기를 제거한 후 얇게 썰어줍니다.\n",
+      "\n",
+      "3. **양념에 재우기**  \n",
+      "   버섯이나 두부를 양념장에 넣고 잘 버무린 후, 랩을 씌워 냉장고에서 최소 30분 이상 재워둡니다.\n",
+      "\n",
+      "4. **채소 손질**  \n",
+      "   양파는 채 썰고, 당근은 얇게 채 썰기, 대파는 어슷하게 썰기 준비합니다.\n",
+      "\n",
+      "5. **요리하기**  \n",
+      "   팬에 식용유를 두르고 중불에서 달군 후, 양파와 당근을 먼저 볶아줍니다. 채소가 살짝 익으면 재워둔 버섯이나 두부를 넣고 볶아줍니다.\n",
+      "\n",
+      "6. **마무리**  \n",
+      "   재료가 익으면 참기름을 넣고 살짝 섞은 후, 대파와 통깨를 뿌려 마무리합니다.\n",
+      "\n",
+      "7. **서빙**  \n",
+      "   따뜻한 밥과 함께 내면 더욱 맛있어요!\n",
+      "\n",
+      "이 방법으로 기존 불고기 레시피를 채식 버전으로 즐기실 수 있습니다. 혹시 더 궁금하신 점이나 다른 한국 요리도 원하시면 말씀해 주세요!"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "['빨강',\n",
-       " '주황',\n",
-       " '노랑',\n",
-       " '초록',\n",
-       " '파랑',\n",
-       " '남색',\n",
-       " '보라',\n",
-       " '분홍',\n",
-       " '흰색',\n",
-       " '검은색',\n",
-       " '회색',\n",
-       " '갈색',\n",
-       " '연두',\n",
-       " '청록',\n",
-       " '마젠타',\n",
-       " '자주색',\n",
-       " '베이지',\n",
-       " '크림색',\n",
-       " '살구색',\n",
-       " '청색',\n",
-       " '라벤더',\n",
-       " '민트',\n",
-       " '버건디',\n",
-       " '와인',\n",
-       " '머스타드',\n",
-       " '올리브',\n",
-       " '카키',\n",
-       " '살구',\n",
-       " '펜슬',\n",
-       " '사파이어']"
+       "AIMessageChunk(content='한국 요리를 좋아하신다니 정말 기쁩니다! 불고기 레시피를 채식 버전으로 변경하는 방법을 안내해 드리겠습니다. 기존 레시피의 핵심 재료와 양념은 최대한 유지하면서, 고기 대신 사용할 수 있는 대체 재료를 찾는 것이 중요합니다.\\n\\n대체 재료 제안:\\n- **버섯**: 얇게 썬 표고버섯이나 느타리버섯은 고기와 비슷한 식감과 풍미를 제공하며, 불고기와 잘 어울립니다.\\n- **두부**: 단단한 두부를 얇게 썰어 양념에 재운 후 볶으면 고기 대신 사용할 수 있습니다.\\n- **식물성 고기 대체품**: 텍스처드 식물성 고기(예: 텍스처드 식물성 단백질, 텍스처드 식물성 고기 제품)가 있다면 활용 가능합니다.\\n\\n양념은 기존 레시피와 동일하게 사용하되, 버섯이나 두부를 넣어 볶는 방식으로 조리하면 됩니다.\\n\\n### 채식 불고기 만들기 (4인분 기준)\\n\\n#### 재료\\n- 표고버섯 또는 느타리버섯 500g (얇게 썬 것) 또는 단단한 두부 400g (얇게 썬 것)\\n- 양파 1개\\n- 당근 1개\\n- 대파 1대\\n- 마늘 4쪽\\n- 참기름 2큰술\\n- 식용유 적당량\\n- 통깨 약간\\n\\n#### 양념 재료\\n- 간장 4큰술\\n- 설탕 2큰술\\n- 맛술 2큰술 (혹은 쌀 식초로 대체 가능)\\n- 다진 마늘 1큰술\\n- 다진 생강 1작은술 (선택)\\n- 후춧가루 약간\\n- 배 또는 사과 1/2개 (갈아서 사용)\\n\\n#### 만드는 법\\n1. **양념장 준비**  \\n   볼에 간장, 설탕, 맛술, 다진 마늘, 다진 생강, 배 또는 사과 갈은 것, 후춧가루를 넣고 잘 섞어 양념장을 만듭니다.\\n\\n2. **대체 재료 손질**  \\n   버섯은 얇게 썰고, 두부는 키친타월로 물기를 제거한 후 얇게 썰어줍니다.\\n\\n3. **양념에 재우기**  \\n   버섯이나 두부를 양념장에 넣고 잘 버무린 후, 랩을 씌워 냉장고에서 최소 30분 이상 재워둡니다.\\n\\n4. **채소 손질**  \\n   양파는 채 썰고, 당근은 얇게 채 썰기, 대파는 어슷하게 썰기 준비합니다.\\n\\n5. **요리하기**  \\n   팬에 식용유를 두르고 중불에서 달군 후, 양파와 당근을 먼저 볶아줍니다. 채소가 살짝 익으면 재워둔 버섯이나 두부를 넣고 볶아줍니다.\\n\\n6. **마무리**  \\n   재료가 익으면 참기름을 넣고 살짝 섞은 후, 대파와 통깨를 뿌려 마무리합니다.\\n\\n7. **서빙**  \\n   따뜻한 밥과 함께 내면 더욱 맛있어요!\\n\\n이 방법으로 기존 불고기 레시피를 채식 버전으로 즐기실 수 있습니다. 혹시 더 궁금하신 점이나 다른 한국 요리도 원하시면 말씀해 주세요!')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "template = ChatPromptTemplate.from_messages(\n",
+    "veg_chef_prompt = ChatPromptTemplate.from_messages(\n",
     "    [\n",
     "        (\n",
     "            \"system\",\n",
-    "            \"당신은 목록 생성기입니다. 요청받은 모든 내용은 최대 {max_items}개의 쉼표로 구분된 목록으로 응답해야 합니다. 다른 어떤 것도 응답하지 마십시오.\",\n",
+    "            \"당신은 채식 요리법 전문가입니다. 전통적인 채식주의자용 레시페이 특화되어 있습니다. 당신은 대체 재료를 찾고 준비하는 방법에 대해 설명합니다. 기존 레시피를 많이 변경하면 안됩니다. 만양 다른 대체품이 없다면 그냥 레시피를 모른다고 말하세요.\",\n",
     "        ),\n",
-    "        (\"human\", \"{question}\"),\n",
+    "        (\n",
+    "            \"human\",\n",
+    "            \"{recipe}\",\n",
+    "        ),\n",
     "    ]\n",
     ")\n",
     "\n",
-    "chain = template | chat | CommaOutParser()\n",
-    "chain.invoke({\"question\": \"색깔의 이름을 알려주세요\", \"max_items\": 30})"
+    "veg_chain = veg_chef_prompt | chat\n",
+    "\n",
+    "final_chain = {\"recipe\": chef_chain} | veg_chain\n",
+    "\n",
+    "final_chain.invoke({\"cuisine\": \"한국\"})"
    ]
   }
  ],
